// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`mp-ui snapshots > ActionPanel 1`] = `
<DocumentFragment>
  <div
    data-taro="View"
    style="position: fixed; top: 0px; left: 0px; right: 0px; bottom: 0px; z-index: 100;"
  >
    <div
      class="mp-mask-in"
      data-taro="View"
      style="position: absolute; top: 0px; left: 0px; right: 0px; bottom: 0px; background-color: rgba(0, 0, 0, 0.72);"
    />
    <div
      data-taro="View"
      style="position: absolute; left: 0px; right: 0px; bottom: 0px; background-color: rgb(20, 17, 15); border-radius: 16px 16px 0 0; padding-bottom: 36px; border-top: 1px solid rgba(255, 255, 255, 0.08); animation: mp-sheet-in 360ms cubic-bezier(0.22, 1, 0.36, 1);"
    >
      <div
        data-taro="View"
        style="display: flex; justify-content: center; padding: 8px 0px 2px;"
      >
        <div
          data-taro="View"
          style="width: 40px; height: 4px; border-radius: 2px; background-color: rgba(255, 255, 255, 0.22);"
        />
      </div>
      <div
        data-taro="View"
        style="padding: 0px 14px 8px; display: flex; flex-direction: column; gap: 10px;"
      >
        <div
          data-taro="View"
          style="background-color: rgb(26, 23, 20); border-radius: 12px; overflow: hidden; border: 1px solid rgba(255, 255, 255, 0.06);"
        >
          <div
            data-taro="View"
            style="display: flex; justify-content: center; padding: 12px; border-bottom: 1px solid rgba(255, 255, 255, 0.06);"
          >
            <span
              data-taro="Text"
              style="font-size: 13px; color: rgba(255, 255, 255, 0.45);"
            >
              对「布丁」执行
            </span>
          </div>
          <div
            data-taro="View"
            style="border-top: 1px solid rgba(255, 255, 255, 0.06);"
          >
            <div
              data-taro="View"
              style="display: flex; justify-content: center; padding: 16px; background-color: transparent; transition: background-color 90ms ease;"
            >
              <span
                data-taro="Text"
                style="font-size: 17px; font-weight: 500; color: rgba(255, 255, 255, 0.92);"
              >
                移笼
              </span>
            </div>
          </div>
          <div
            data-taro="View"
            style="border-top: 1px solid rgba(255, 255, 255, 0.06);"
          >
            <div
              data-taro="View"
              style="display: flex; justify-content: center; padding: 16px; background-color: transparent; transition: background-color 90ms ease;"
            >
              <span
                data-taro="Text"
                style="font-size: 17px; font-weight: 500; color: rgb(226, 104, 91);"
              >
                删除个体
              </span>
            </div>
          </div>
        </div>
        <div
          data-taro="View"
          style="background-color: rgb(26, 23, 20); border-radius: 12px; overflow: hidden; border: 1px solid rgba(255, 255, 255, 0.06);"
        >
          <div
            data-taro="View"
            style="display: flex; justify-content: center; padding: 16px; background-color: transparent; transition: background-color 90ms ease;"
          >
            <span
              data-taro="Text"
              style="font-size: 17px; font-weight: 700; color: rgb(255, 255, 255);"
            >
              取消
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`mp-ui snapshots > Button 三变体与禁用 1`] = `
<DocumentFragment>
  <div
    data-taro="View"
    style="display: inline-flex; align-items: center; justify-content: center; box-sizing: border-box; transition: transform 90ms cubic-bezier(0.33, 1, 0.68, 1), opacity 90ms ease, background-color 90ms ease; transform: scale(1); opacity: 1; min-height: 48px; padding: 12px 20px; border-radius: 8px; background-color: rgb(255, 255, 255); color: rgb(17, 17, 17); font-size: 15px; font-weight: 600;"
  >
    <span
      data-taro="Text"
      style="color: inherit; font-size: inherit; font-weight: inherit;"
    >
      保存
    </span>
  </div>
  <div
    data-taro="View"
    style="display: inline-flex; align-items: center; justify-content: center; box-sizing: border-box; transition: transform 90ms cubic-bezier(0.33, 1, 0.68, 1), opacity 90ms ease, background-color 90ms ease; transform: scale(1); opacity: 1; min-height: 44px; padding: 10px 18px; border-radius: 8px; background-color: transparent; border: 1px solid rgba(255, 255, 255, 0.18); color: rgba(255, 255, 255, 0.82); font-size: 15px; font-weight: 600;"
  >
    <span
      data-taro="Text"
      style="color: inherit; font-size: inherit; font-weight: inherit;"
    >
      次要
    </span>
  </div>
  <div
    data-taro="View"
    style="display: inline-flex; align-items: center; justify-content: center; box-sizing: border-box; transition: transform 90ms cubic-bezier(0.33, 1, 0.68, 1), opacity 90ms ease, background-color 90ms ease; transform: scale(1); opacity: 1; color: rgb(232, 165, 106); font-size: 16px; font-weight: 600; letter-spacing: 0.1px;"
  >
    <span
      data-taro="Text"
      style="color: inherit; font-size: inherit; font-weight: inherit;"
    >
      跳过
    </span>
  </div>
  <div
    data-taro="View"
    style="display: inline-flex; align-items: center; justify-content: center; box-sizing: border-box; transition: transform 90ms cubic-bezier(0.33, 1, 0.68, 1), opacity 90ms ease, background-color 90ms ease; transform: scale(1); opacity: 0.45; min-height: 48px; padding: 12px 20px; border-radius: 8px; background-color: rgb(255, 255, 255); color: rgb(17, 17, 17); font-size: 15px; font-weight: 600;"
  >
    <span
      data-taro="Text"
      style="color: inherit; font-size: inherit; font-weight: inherit;"
    >
      保存
    </span>
  </div>
</DocumentFragment>
`;

exports[`mp-ui snapshots > Empty 空态 1`] = `
<DocumentFragment>
  <div
    data-taro="View"
    style="display: flex; flex-direction: column; align-items: flex-start; padding: 44px 16px; gap: 6px;"
  >
    <span
      data-taro="Text"
      style="font-size: 16px; font-weight: 500; line-height: 1.4; color: rgba(255, 255, 255, 0.72);"
    >
      暂无今日任务
    </span>
    <span
      data-taro="Text"
      style="font-size: 14px; line-height: 1.5; color: rgba(255, 255, 255, 0.38);"
    >
      今天的照护任务都完成了
    </span>
    <div
      data-taro="View"
      style="margin-top: 16px;"
    >
      <div
        data-taro="View"
        style="display: inline-flex; align-items: center; justify-content: center; box-sizing: border-box; transition: transform 90ms cubic-bezier(0.33, 1, 0.68, 1), opacity 90ms ease, background-color 90ms ease; transform: scale(1); opacity: 1; min-height: 44px; padding: 10px 18px; border-radius: 8px; background-color: transparent; border: 1px solid rgba(255, 255, 255, 0.18); color: rgba(255, 255, 255, 0.82); font-size: 15px; font-weight: 600;"
      >
        <span
          data-taro="Text"
          style="color: inherit; font-size: inherit; font-weight: inherit;"
        >
          去看看个体
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`mp-ui snapshots > FormRow 含错误提示 1`] = `
<DocumentFragment>
  <div
    data-taro="View"
    style="display: flex; flex-direction: column; gap: 4px; padding: 14px 16px;"
  >
    <div
      data-taro="View"
      style="display: flex; align-items: center; gap: 12px; min-height: 24px;"
    >
      <span
        data-taro="Text"
        style="font-size: 15px; font-weight: 400; letter-spacing: -0.08px; line-height: 1.56; color: rgba(255, 255, 255, 0.68); width: 88px; flex-shrink: 0;"
      >
        体重(g)
      </span>
      <div
        data-taro="View"
        style="flex: 1 1 0%; min-width: 0;"
      >
        <input
          data-taro="Input"
          value="abc"
        />
      </div>
    </div>
    <span
      data-taro="Text"
      style="font-size: 13px; line-height: 1.38; color: rgb(226, 104, 91); padding-left: 100px;"
    >
      必须是 1–500 的数字
    </span>
  </div>
</DocumentFragment>
`;

exports[`mp-ui snapshots > NavBar 收缩态(含返回与右操作) 1`] = `
<DocumentFragment>
  <div
    data-taro="View"
    style="position: relative; z-index: 10;"
  >
    <div
      data-taro="View"
      style="position: fixed; top: 0px; left: 0px; right: 0px; z-index: 10; padding-top: 44px; background-color: rgba(5, 4, 3, 0.9); transition: border-color 90ms linear, background-color 90ms linear; border-bottom: 1px solid rgba(255, 255, 255, 0.06);"
    >
      <div
        data-taro="View"
        style="display: flex; align-items: center; height: 44px; padding: 0px 14px; box-sizing: border-box;"
      >
        <div
          data-taro="View"
          style="width: 60px; height: 100%; display: flex; align-items: center; justify-content: flex-start;"
        >
          <span
            data-taro="Text"
            style="font-size: 22px; color: rgb(255, 255, 255); font-weight: 300;"
          >
            ‹
          </span>
        </div>
        <div
          data-taro="View"
          style="flex: 1 1 0%; display: flex; justify-content: center;"
        >
          <span
            data-taro="Text"
            style="font-size: 17px; font-weight: 600; letter-spacing: -0.41px; color: rgb(255, 255, 255); opacity: 1; transition: opacity 90ms linear;"
          >
            个体
          </span>
        </div>
        <div
          data-taro="View"
          style="width: 60px; display: flex; justify-content: flex-end;"
        >
          <div
            data-taro="View"
            style="display: inline-flex; align-items: center; padding: 3px 9px; border-radius: 4px; background-color: rgba(255, 255, 255, 0.06);"
          >
            <span
              data-taro="Text"
              style="font-size: 12px; font-weight: 600; line-height: 1.35; color: rgba(255, 255, 255, 0.5);"
            >
              3 项
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      data-taro="View"
      style="height: 88px;"
    />
  </div>
</DocumentFragment>
`;

exports[`mp-ui snapshots > NavBar 顶部态(小标题隐藏)+ LargeTitle 1`] = `
<DocumentFragment>
  <div
    data-taro="View"
    style="position: relative; z-index: 10;"
  >
    <div
      data-taro="View"
      style="position: fixed; top: 0px; left: 0px; right: 0px; z-index: 10; padding-top: 44px; background-color: rgba(5, 4, 3, 0.9); transition: border-color 90ms linear, background-color 90ms linear; border-bottom: 1px solid transparent;"
    >
      <div
        data-taro="View"
        style="display: flex; align-items: center; height: 44px; padding: 0px 14px; box-sizing: border-box;"
      >
        <div
          data-taro="View"
          style="width: 60px; height: 100%; display: flex; align-items: center; justify-content: flex-start;"
        />
        <div
          data-taro="View"
          style="flex: 1 1 0%; display: flex; justify-content: center;"
        >
          <span
            data-taro="Text"
            style="font-size: 17px; font-weight: 600; letter-spacing: -0.41px; color: rgb(255, 255, 255); opacity: 0; transition: opacity 90ms linear;"
          >
            今日
          </span>
        </div>
        <div
          data-taro="View"
          style="width: 60px; display: flex; justify-content: flex-end;"
        />
      </div>
    </div>
    <div
      data-taro="View"
      style="height: 88px;"
    />
  </div>
  <div
    data-taro="View"
    style="padding: 8px 14px 12px; display: flex; align-items: flex-end; justify-content: space-between;"
  >
    <span
      data-taro="Text"
      style="font-size: 28px; font-weight: 600; letter-spacing: -0.5px; line-height: 1.15; color: rgb(255, 255, 255);"
    >
      今日
    </span>
  </div>
</DocumentFragment>
`;

exports[`mp-ui snapshots > SectionList + Section + Cell 1`] = `
<DocumentFragment>
  <div
    data-taro="View"
    style="display: flex; flex-direction: column; gap: 28px; padding: 0px 14px calc(36px + env(safe-area-inset-bottom));"
  >
    <div
      data-taro="View"
      style="display: flex; flex-direction: column; gap: 8px;"
    >
      <div
        data-taro="View"
        style="padding: 0px 16px;"
      >
        <span
          data-taro="Text"
          style="font-size: 12px; font-weight: 600; letter-spacing: 0.6px; color: rgba(255, 255, 255, 0.34);"
        >
          今日照护
        </span>
      </div>
      <div
        data-taro="View"
        style="background-color: rgb(24, 23, 22); border-radius: 10px; overflow: hidden; border: 1px solid rgba(255, 255, 255, 0.09);"
      >
        <div
          data-hover-class="none"
          data-hover-stay="80"
          data-taro="View"
          style="display: flex; align-items: center; min-height: 52px; padding: 14px 16px; box-sizing: border-box; gap: 12px;"
        >
          <div
            data-taro="View"
            style="flex: 1 1 0%; display: flex; flex-direction: column; gap: 3px; min-width: 0;"
          >
            <span
              data-taro="Text"
              style="font-size: 17px; font-weight: 400; letter-spacing: -0.16px; line-height: 1.52; color: rgb(255, 255, 255);"
            >
              喂食 · 全部笼舍
            </span>
            <span
              data-taro="Text"
              style="font-size: 15px; font-weight: 400; letter-spacing: -0.08px; line-height: 1.56; color: rgba(255, 255, 255, 0.45);"
            >
              每日 20:00
            </span>
          </div>
          <span
            data-taro="Text"
            style="font-size: 17px; font-weight: 400; letter-spacing: -0.16px; line-height: 1.52; color: rgba(255, 255, 255, 0.45);"
          >
            待办
          </span>
          <span
            data-taro="Text"
            style="font-size: 18px; font-weight: 500; color: rgba(255, 255, 255, 0.35);"
          >
            ›
          </span>
        </div>
        <div
          data-hover-class="none"
          data-hover-stay="80"
          data-taro="View"
          style="display: flex; align-items: center; min-height: 52px; padding: 14px 16px; box-sizing: border-box; gap: 12px; border-top: 1px solid rgba(255, 255, 255, 0.06);"
        >
          <div
            data-taro="View"
            style="flex: 1 1 0%; display: flex; flex-direction: column; gap: 3px; min-width: 0;"
          >
            <span
              data-taro="Text"
              style="font-size: 17px; font-weight: 400; letter-spacing: -0.16px; line-height: 1.52; color: rgb(255, 255, 255);"
            >
              体重记录 · 布丁
            </span>
          </div>
          <span
            data-taro="Text"
            style="font-size: 17px; font-weight: 400; letter-spacing: -0.16px; line-height: 1.52; color: rgba(255, 255, 255, 0.45);"
          >
            已完成
          </span>
        </div>
      </div>
      <span
        data-taro="Text"
        style="font-size: 13px; font-weight: 400; letter-spacing: 0px; line-height: 1.48; color: rgba(255, 255, 255, 0.35); padding: 0px 16px;"
      >
        共 2 项
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`mp-ui snapshots > SegmentedControl 1`] = `
<DocumentFragment>
  <div
    data-taro="View"
    style="display: flex; flex-direction: row; border-bottom: 1px solid rgba(255, 255, 255, 0.09);"
  >
    <div
      data-taro="View"
      style="margin-right: 22px; padding-bottom: 10px; margin-bottom: -1px; border-bottom: 2px solid transparent; transition: border-color 90ms ease;"
    >
      <span
        data-taro="Text"
        style="font-size: 14px; font-weight: 500; color: rgba(255, 255, 255, 0.42);"
      >
        全部
      </span>
    </div>
    <div
      data-taro="View"
      style="margin-right: 22px; padding-bottom: 10px; margin-bottom: -1px; border-bottom: 2px solid rgb(232, 165, 106); transition: border-color 90ms ease;"
    >
      <span
        data-taro="Text"
        style="font-size: 14px; font-weight: 600; color: rgb(255, 255, 255);"
      >
        待办
      </span>
    </div>
    <div
      data-taro="View"
      style="margin-right: 22px; padding-bottom: 10px; margin-bottom: -1px; border-bottom: 2px solid transparent; transition: border-color 90ms ease;"
    >
      <span
        data-taro="Text"
        style="font-size: 14px; font-weight: 500; color: rgba(255, 255, 255, 0.42);"
      >
        已完成
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`mp-ui snapshots > Sheet 打开态 1`] = `
<DocumentFragment>
  <div
    data-taro="View"
    style="position: fixed; top: 0px; left: 0px; right: 0px; bottom: 0px; z-index: 100;"
  >
    <div
      class="mp-mask-in"
      data-taro="View"
      style="position: absolute; top: 0px; left: 0px; right: 0px; bottom: 0px; background-color: rgba(0, 0, 0, 0.72);"
    />
    <div
      data-taro="View"
      style="position: absolute; left: 0px; right: 0px; bottom: 0px; background-color: rgb(20, 17, 15); border-radius: 16px 16px 0 0; padding-bottom: 36px; border-top: 1px solid rgba(255, 255, 255, 0.08); animation: mp-sheet-in 360ms cubic-bezier(0.22, 1, 0.36, 1);"
    >
      <div
        data-taro="View"
        style="display: flex; justify-content: center; padding: 8px 0px 2px;"
      >
        <div
          data-taro="View"
          style="width: 40px; height: 4px; border-radius: 2px; background-color: rgba(255, 255, 255, 0.22);"
        />
      </div>
      <div
        data-hover-class="none"
        data-hover-stay="80"
        data-taro="View"
        style="display: flex; align-items: center; min-height: 52px; padding: 14px 16px; box-sizing: border-box; gap: 12px;"
      >
        <div
          data-taro="View"
          style="flex: 1 1 0%; display: flex; flex-direction: column; gap: 3px; min-width: 0;"
        >
          <span
            data-taro="Text"
            style="font-size: 17px; font-weight: 400; letter-spacing: -0.16px; line-height: 1.52; color: rgb(255, 255, 255);"
          >
            内容
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`mp-ui snapshots > SwipeAction 静止态 1`] = `
<DocumentFragment>
  <div
    data-taro="View"
    style="position: relative; overflow: hidden;"
  >
    <div
      data-taro="View"
      style="position: absolute; top: 0px; bottom: 0px; right: 0px; display: flex;"
    >
      <div
        data-taro="View"
        style="width: 72px; display: flex; align-items: center; justify-content: center; background-color: rgba(255, 255, 255, 0.13);"
      >
        <span
          data-taro="Text"
          style="font-size: 13px; font-weight: 600; color: rgb(255, 255, 255);"
        >
          归档
        </span>
      </div>
      <div
        data-taro="View"
        style="width: 72px; display: flex; align-items: center; justify-content: center; background-color: rgb(180, 72, 62);"
      >
        <span
          data-taro="Text"
          style="font-size: 13px; font-weight: 600; color: rgb(255, 255, 255);"
        >
          删除
        </span>
      </div>
    </div>
    <div
      data-taro="View"
      style="position: relative; background-color: rgb(24, 23, 22); transform: translateX(0px); transition: transform 360ms cubic-bezier(0.22, 1, 0.36, 1);"
    >
      <div
        data-hover-class="none"
        data-hover-stay="80"
        data-taro="View"
        style="display: flex; align-items: center; min-height: 52px; padding: 14px 16px; box-sizing: border-box; gap: 12px;"
      >
        <div
          data-taro="View"
          style="flex: 1 1 0%; display: flex; flex-direction: column; gap: 3px; min-width: 0;"
        >
          <span
            data-taro="Text"
            style="font-size: 17px; font-weight: 400; letter-spacing: -0.16px; line-height: 1.52; color: rgb(255, 255, 255);"
          >
            小仓鼠
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`mp-ui snapshots > Tag 各语义 1`] = `
<DocumentFragment>
  <div
    data-taro="View"
    style="display: inline-flex; align-items: center; padding: 3px 9px; border-radius: 4px; background-color: rgba(255, 255, 255, 0.08);"
  >
    <span
      data-taro="Text"
      style="font-size: 12px; font-weight: 600; line-height: 1.35; color: rgba(255, 255, 255, 0.7);"
    >
      默认
    </span>
  </div>
  <div
    data-taro="View"
    style="display: inline-flex; align-items: center; padding: 3px 9px; border-radius: 4px; background-color: rgba(255, 255, 255, 0.06);"
  >
    <span
      data-taro="Text"
      style="font-size: 12px; font-weight: 600; line-height: 1.35; color: rgba(255, 255, 255, 0.5);"
    >
      品牌
    </span>
  </div>
  <div
    data-taro="View"
    style="display: inline-flex; align-items: center; padding: 3px 9px; border-radius: 4px; background-color: rgba(107, 168, 120, 0.18);"
  >
    <span
      data-taro="Text"
      style="font-size: 12px; font-weight: 600; line-height: 1.35; color: rgb(143, 203, 155);"
    >
      健康
    </span>
  </div>
  <div
    data-taro="View"
    style="display: inline-flex; align-items: center; padding: 3px 9px; border-radius: 4px; background-color: rgba(226, 104, 91, 0.16);"
  >
    <span
      data-taro="Text"
      style="font-size: 12px; font-weight: 600; line-height: 1.35; color: rgb(226, 104, 91);"
    >
      逾期
    </span>
  </div>
  <div
    data-taro="View"
    style="display: inline-flex; align-items: center; padding: 3px 9px; border-radius: 4px; background-color: rgba(226, 192, 119, 0.18);"
  >
    <span
      data-taro="Text"
      style="font-size: 12px; font-weight: 600; line-height: 1.35; color: rgb(226, 192, 119);"
    >
      待观察
    </span>
  </div>
</DocumentFragment>
`;
